hard-gists/9c1614281797ce620c6069476d39c7b8/run.log
=== Docker Run Log for 9c1614281797ce620c6069476d39c7b8 ===
Started at: Mi 29. Okt 18:41:08 CET 2025

[2025-10-29 18:41:08] START: Running container for 9c1614281797ce620c6069476d39c7b8
[2025-10-29 18:41:08] SUCCESS: Container fdd9142214d1aa3144429361c28e565db11aa81d33f942b185c86411d23f1bb7 started for 9c1614281797ce620c6069476d39c7b8
=== Container logs for 9c1614281797ce620c6069476d39c7b8 ===
  File "/snippet.py", line 34
    print "Timestamp for first frame: "+hh+mm+ss+ff
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 9c1614281797ce620c6069476d39c7b8 ===
[2025-10-29 18:41:11] INFO: Container fdd9142214d1aa3144429361c28e565db11aa81d33f942b185c86411d23f1bb7 has stopped
